# Taller-Algoritmos-1-2019

./: README.md
L04-TallerDebugging[viejo]/taller/: CMakeLists.txt  ejercicios.cpp  main.cpp
L04-TallerDebugging[viejo]/taller/test/: cases.cpp
Labo01/: Labo01.cpp
Labo02/: labo02.cpp
Labo03-Vectores/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
Labo05/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
Labo06-matrices/: CMakeLists.txt  ejercicios.cpp  main  main.cpp  matrix_utilities.cpp  matrix_utilities.h
Labo08/: graficar.py
Labo08/Ejercicios/: CMakeLists.txt  ejercicios.cpp  ejercicios.h  main.cpp
Labo09-Ordenamiento/: CMakeLists.txt  main.cpp
Laboratorio 07/ejemplo/: run.cpp
Laboratorio 07/ejemplo/test/ej/: ejTEST.cpp
Laboratorio 07/taller/src/ej3/: contandoDragones.cpp  sandia.cpp
Laboratorio 07/taller/test/: correrTests.cpp
Laboratorio 07/taller/test/ej1/: esPrimoTEST.cpp
Laboratorio 07/taller/test/ej2/: llenarTaxisTEST.cpp  puntajeTEST.cpp
Laboratorio 07/taller/test/ej3/: contandoDragonesTEST.cpp
Para parcial 2/: main  main.cpp
